--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Resizable Blockly (Part 1)</title>
+  <title>Butcher Demo</title>
   <style>
     html, body {
       height: 100%;
@@ -28,5 +28,23 @@
     }
   </style>
 </head>
+<body>
+  <table>
+    <tr>
+      <td>
+        <p>The first step in creating a resizable Blockly workspace is to use
+        CSS or tables to create an area for it.
+        Next, <a href="overlay.html">inject Blockly</a> over that area.</p>
 
+        <p>&rarr; More info on <a href="https://developers.google.com/blockly/guides/configure/web/resizable">injecting resizable Blockly</a>&hellip;</p>
+      </td>
+    </tr>
+    <tr>
+      <td id="blocklyArea">
+        Blockly will be positioned here.
+      </td>
+    </tr>
+  </table>
+</body>
+</html>
 <script src="https://unpkg.com/blockly/blockly.min.js"></script>
